--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "cypress": "^15.5.0",
     "cypress-mochawesome-reporter": "^4.0.2"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.18"
   }
 }
